--- a/html/sty.css
+++ b/html/sty.css
@@ -1,21 +1,22 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
-    
+    background-image:url(fundo-colorido.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-attachment: fixed;
 }
-.legendaSuperior{
-    text-align: center;
-    background-color: rgb(168, 101, 255);
-    padding: 10px;
-    font-size: 20px;
-    border: none;
-}
+h1{
+   text-align: center;
+   border:none;
+   background-image: none;
+   padding:5px;
+   color:#000
 
-.fundoFieldset{
+}
+.form{
     text-align: center;
-    transform: translate(-50% -50%);
-    padding: 128px;
-    border: none;
+    font-family:initial ;
 }
 .fieldset1{
     text-align: center;
@@ -25,16 +26,17 @@ body{
 .fieldset2{
     text-align: center;
     padding: 5px;
-    width: 100%;
-    border: 1px solid black;
+    width: 99%;
+    border: 1px solid  black;
+    
 }
 .botaoUser{
     border:1px solid black;
     padding: 10%;
     cursor: pointer;
     font-size:17px;
-    margin: 40px;
-    background-color: rgb(168, 101, 255);
+    margin: 20px;
+    background-color: rgb(187, 187, 187); 
     border-radius: 15px;
     color: rgb(0, 0, 0);
     width: 35%
@@ -48,5 +50,6 @@ body{
     margin-right: 100px;
     margin-left: 50px;
     border:1px solid black;
-    background-color: rgb(168, 101, 255);
+    background-color: rgb(187, 187, 187); 
+  
 }
