--- a/html/sty.css
+++ b/html/sty.css
@@ -1,7 +1,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
-    background-image:url(fundo-colorido.jpg);
+    background-image:url(guigata.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     background-attachment: fixed;
