--- a/home/sty.css
+++ b/home/sty.css
@@ -1,55 +1,112 @@
 body{
+    background-color:rgb(241, 241, 241);
+    margin: 0px;
+    
+}
+#top{
+    background-color: rgb(111, 0, 255);
+    padding-right: 375px;
+}
+div{
+    display: inline-block;
+}
+#box{
+    background-color: rgb(241, 241, 241);
+    padding-right: 500px;
+    padding-left: 10px;
+}
+#divBusca{
+    background-color:transparent;
+    border:solid 1px;
+    border-radius:15px;
+    width:300px;
+    border: none;
+    padding-left: 15px;
+}
+#txtBusca{
+  float:left;
+  background-color:#fff;
+  padding-left:200px;
+  font-style:italic;
+  font-size:18px;
+  border:none;
+  height:32px;
+  width:260px;
+  border: 1px solid black;
+  padding-right: 100px;
+  font-size: 20px;
+}
+#cabecalio{
+    background-color: rgb(111, 0, 255);
+    color: #fff;
+    padding-left: 5px;
+    padding-right: 10px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
-    background-image:url(fundo.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-attachment: fixed;
 }
-h1{
-   text-align: center;
-   border:none;
-   background-image: none;
-   padding:5px;
-   color:#000
-
-}
-.form{
+#bordaDaGuia{
+    background-color: rgb(247, 247, 247);
     text-align: center;
-    font-family:initial ;
+    border-radius: 5px;
+    margin-right: -0px;
 }
-.fieldset1{
-    text-align: center;
-    border:none
-}
-
-.fieldset2{
-    text-align: center;
-    padding: 5px;
-    width: 99%;
-    border: 1px solid  black;
-    
-}
-.botaoUser{
-    border:1px solid black;
-    padding: 10%;
+#botaoDaGuiaH{
+    border: none;
+    background-color: rgb(111, 0, 255);
     cursor: pointer;
-    font-size:17px;
-    margin: 20px;
-    background-color: rgb(187, 187, 187); 
-    border-radius: 15px;
-    color: rgb(0, 0, 0);
-    width: 35%
-
-    
-}
-.botaoDaGuia{
-    padding: 10px;
-    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
     font-size: 15px;
-    margin-right: 100px;
-    margin-left: 50px;
-    border:1px solid black;
-    background-color: rgb(187, 187, 187); 
-  
+}
+#botaoDaGuiaV{
+    border: none;
+    background-color: rgb(202, 202, 202);
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+#botaoDaGuiaC{
+    border: none;
+    background-color: rgb(202, 202, 202);
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+#botaoDaGuiaA{
+    border: none;
+    background-color: rgb(202, 202, 202);
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+#botaoDaGuiaH:hover{
+    background-color: rgb(111, 0, 255);
+    font-size: 15px;
+}
+#botaoDaGuiaV:hover{
+    background-color: rgb(111, 0, 255);
+    font-size: 15px;
+}
+#botaoDaGuiaC:hover{
+    background-color: rgb(111, 0, 255);
+    font-size: 15px;
+}
+#botaoDaGuiaA:hover{
+    background-color: rgb(111, 0, 255);
+    font-size: 15px;
+}
+#oi{
+    font-family:monospace;
+    font-size: 30px;
+    background-color:#ffff;
+}
+#recado{
+    background-color: rgb(201, 201, 201);
+    font-family:monospace;
+    font-size: 30px;
+}
+#creditos{
+ padding-left: 300px;
+ margin-right: -300px;
+ text-align: center;
+ padding-top: 114px;
 }
